[bdist_wheel]
universal = 1

[metadata]
name = blockchyp
description = The official library for accessing the BlockChyp Terminal and Gateway APIs
author = BlockChyp
author_email = support@blockchyp.com
url = https://github.com/blockchyp/blockchyp-python
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
include_package_data = true
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries

[options]
zip_safe = True
setup_requires = setuptools_scm
install_requires = six >= 1.5
python_requires = >=3.5

[sdist]
formats = gztar

[tool:pytest]
python_files=
    *_test.py
xfail_struct = true
markers =
    itest: marks tests as integration tests (deselect with '-m "not itest"')
