[metadata]
name = blockchyp
description = The official library for accessing the BlockChyp Terminal and Gateway APIs
author = BlockChyp
author_email = support@blockchyp.com
url = https://github.com/blockchyp/blockchyp-python
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries

[options]
packages = find:
include_package_data = true
zip_safe = True
install_requires =
    cryptography
    requests
python_requires = >=3.5

[options.packages.find]
include =
    blockchyp
    blockchyp.*

[sdist]
formats = gztar

[tool:pytest]
python_files=
    *_test.py
xfail_struct = true
markers =
    itest: marks tests as integration tests (deselect with '-m "not itest"')
